welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:31: error: not found: value peindreSol
		peindreSol()
                ^